# FreeRAG

./: .gitignore  Dockerfile  README.md  api.py  app.py  main.py  pyproject.toml  requirements.txt
.cache/qa_store/: embeddings.npy  qa_pairs.json
.cache/responses/: 2cf24dba5fb0a30e.json  b94d27b9934d3e08.json
.github/workflows/: deploy-hf-spaces.yml
faq/: README.md  freerag_faq.txt
src/: __init__.py  cache.py  config.py  qa_store.py  session.py  vacaylanka_fetcher.py
src/document_loader/: __init__.py  loader.py  splitter.py
src/embeddings/: __init__.py  sentence_embeddings.py
src/llm/: __init__.py  groq_llm.py  phi_model.py
src/rag/: __init__.py  pipeline.py  retriever.py
src/vectorstore/: __init__.py  chroma_store.py
